修改：     libmc.sh 修改：     mc-1.12.desktop

--- a/mc-1.12.desktop
+++ b/mc-1.12.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Minecraft(v1.12)
 Comment=Minecraft(v1.12)
-Exec=minecraft-1.12.sh
+Exec=mc-1.12.sh
 Icon=/home/zx/bin/mc-icon.png
 Terminal=false
 Type=Application
