--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
       - name: 跑起来~
         run: |
           cd mc-fishing-opencv/
+          python -m pip install -U pip
+          pip install pyinstaller>=6.3
           pip install -r requirements.txt
           echo "==================="
           pyinstaller mc-fishing.spec
