--- a/.github/workflows/win10.yml
+++ b/.github/workflows/win10.yml
@@ -1,15 +1,15 @@
-name: 打包工作流
+name: windows 10 打包工作流
 
 
 on:
-  push:
-    branches:
-      - devel
+#   push:
+    # branches:
+    #   - devel
   workflow_dispatch:
 
 jobs:
   mc_fishing_opencv:
-    runs-on: ubuntu-latest
+    runs-on: windows-2019
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -25,8 +25,8 @@ jobs:
           echo "==================="
           pyinstaller mc-fishing.spec
           echo "==================="
-          (cd dist/;zip -r ../mc-fishing.zip mc-fishing/)
-          #(cd dist;python -m zipfile -c ../mc-fishing.zip mc-fishing/)
+          #(cd dist/;zip -r ../mc-fishing.zip mc-fishing/)
+          (cd dist;python -m zipfile -c ../mc-fishing.zip mc-fishing/)
           
       - name: 保存到工件
         uses: actions/upload-artifact@v4
