--- a/.github/workflows/win10.yml
+++ b/.github/workflows/win10.yml
@@ -2,9 +2,9 @@ name: windows 10 打包工作流
 
 
 on:
-#   push:
-    # branches:
-    #   - devel
+  push:
+    branches:
+      - workflow
   workflow_dispatch:
 
 jobs:
