--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -25,13 +25,13 @@ jobs:
           echo "==================="
           pyinstaller mc-fishing.spec
           echo "==================="
-          (cd dist/;zip -r ../mc-fishing.zip mc-fishing/)
+          #(cd dist/;zip -r ../mc-fishing.zip mc-fishing/)
           #(cd dist;python -m zipfile -c ../mc-fishing.zip mc-fishing/)
           
       - name: 保存到工件
         uses: actions/upload-artifact@v4
         with:
-          name: mc-fishing-ubuntu-22.04.zip
-          path: mc-fishing-opencv/mc-fishing.zip
+          name: mc-fishing-ubuntu-22.04
+          path: mc-fishing-opencv/mc-fishing/
 
 
