--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -18,10 +18,14 @@ jobs:
       
       - name: 跑起来~
         run: |
-          cd mc-fishing-opencv/
-          python -m pip install -U pip
+          python -m pip install -U pip virtualenv
+          virtualenv .venv/
+          source .venv/bin/activate
+
           pip install pyinstaller>=6.3
-          pip install -r requirements.txt
+          pip install -r requirements-linux.txt
+
+          cd mc-fishing-opencv/
           echo "==================="
           pyinstaller mc-fishing.spec
           echo "==================="
