--- a/.github/workflows/win10.yml
+++ b/.github/workflows/win10.yml
@@ -18,10 +18,15 @@ jobs:
       
       - name: 跑起来~
         run: |
-          cd mc-fishing-opencv/
-          python -m pip install -U pip
+
+
+          python -m pip install -U pip virtualenv
+          virtualenv .venv/
+          source .venv/Scripts/activate
           pip install pyinstaller>=6.3
-          pip install -r requirements.txt
+
+          cd mc-fishing-opencv/
+          pip install -r requirements-windows.txt
           echo "==================="
           pyinstaller mc-fishing.spec
           echo "==================="
