--- a/.github/workflows/win10.yml
+++ b/.github/workflows/win10.yml
@@ -19,10 +19,11 @@ jobs:
       - name: 跑起来~
         run: |
 
-
-          python -m pip install -U pip virtualenv
+          python -m pip install -U virtualenv
           virtualenv .venv/
           .venv/Scripts/activate
+
+          python -m pip install -U pip
           pip install pyinstaller>=6.3
 
           cd mc-fishing-opencv/
