--- a/mc-fishing-opencv/requirements-linux.txt
+++ b/mc-fishing-opencv/requirements-linux.txt
@@ -1,5 +1,5 @@
-libevdev==0.11
-opencv-python==4.8.0.74
-mss==9.0.1
+opencv-python==4.12.0.88
+mss==10.1.0
 PyAutoGUI==0.9.54
-numpy>=1.26,<2.0
+numpy==2.2.6
+git+https://github.com/calllivecn/keyboardmouse.git
